--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/MyBuild.loader.js";
+      var loaderUrl = buildUrl + "/MyBuild:museum.loader.js";
       var config = {
-        dataUrl: buildUrl + "/MyBuild.data",
-        frameworkUrl: buildUrl + "/MyBuild.framework.js",
-        codeUrl: buildUrl + "/MyBuild.wasm",
+        dataUrl: buildUrl + "/MyBuild:museum.data",
+        frameworkUrl: buildUrl + "/MyBuild:museum.framework.js",
+        codeUrl: buildUrl + "/MyBuild:museum.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Disco thrower",
